src/objects/Trade_Ally_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Account_Num__c</fullName>
        <label>Account Num</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Trade Ally References</relationshipLabel>
        <relationshipName>Trade_Ally_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Id__c</fullName>
        <label>Business Unit Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Reference Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Reference Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Reference Company Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <label>Reference Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cust_Sup_Name__c</fullName>
        <label>Cust Sup Name</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Id__c</fullName>
        <label>Document Id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <label>Organization Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Num__c</fullName>
        <label>Phone Num</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Letter_Uploaded__c</fullName>
        <label>Reference Letter Uploaded</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Type__c</fullName>
        <label>Reference Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Reference</fullName>
                </value>
                <value>
                    <fullName>Trade Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector_Id__c</fullName>
        <label>Sector Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Area_Id__c</fullName>
        <label>Service Area Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Located__c</fullName>
        <label>State Located</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Locations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Ally__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Ally</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Trade Ally</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Trade Ally</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trade Ally References</relationshipLabel>
        <relationshipName>Trade_Ally_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Reference</fullName>
                </value>
                <value>
                    <fullName>Trade Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Trade Ally Reference</label>
    <nameField>
        <displayFormat>TAR-{0000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Ally References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>